variables.RunFour.scala.error
Compilation error:
RunFour:7: error: not found: value BiscuitsCroisés
    biscuitsCroisés = BiscuitsCroisés + 1
                      ^