variables.RunFour.scala.code
var biscuitsCroisés = 0

while (biscuitsCroisés != 4) {
  
  if (estSurBiscuit()) {
    
    biscuitsCroisés = BiscuitsCroisés + 1
    
  }
  
  avance()
  
}